--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     alt="krzysztof's photo" />
     <h2>Summary</h2>
     <p>"Experienced Continuous Improvement Coordinator with +8 years of expertise in building, motivating<br />
-        optimization project teams up to 10pers (production, quality, supply chain, purchasing), 
-        proven track record cost savings of + €1 million annually @Magna. Qualified in implementing Lean Six Sigma (Green Belt), 
-        incl. DMAIC, SMED, TPM, VSM, Kaizen, problem solving & standardization in the automotive and FMCG industries 
-        (linear/cellular production, mass/custom production). My experience allows me to effectively adapt Lean tools 
+        optimization project teams up to 10pers (production, quality, supply chain, purchasing),<br /> 
+        proven track record cost savings of + €1 million annually @Magna. Qualified in implementing Lean Six Sigma (Green Belt),<br /> 
+        incl. DMAIC, SMED, TPM, VSM, Kaizen, problem solving & standardization in the automotive and FMCG industries<br /> 
+        (linear/cellular production, mass/custom production). My experience allows me to effectively adapt Lean tools<br /> 
         to the specific needs of the organization, increasing productivity, improving operational efficiency, and reducing costs."
     </p>
     <hr />
     <h2>Professional Experience</h2>
     <ul>
-        <li><h3>"Continuous Improvement Coordinator/Manager"</h3>
+        <li><h3>Continuous Improvement Coordinator/Manager</h3>
         <p>"05/2024 – 07/2024 (3m)"</p>
         <p>Magna Lighting, Kostrzyn n/Odra | (automotive lighting, 80IMMs + 20assembly lines, 1000 pers)</p>
         <p>reported to the Engineering Director and East-Europe Finance Director
@@ -40,24 +40,25 @@
     <hr />
     <h2>Key Projects</h2>
     <ol>
-        <li>Cost Reduction, VA/VE + PPV (Magna Lighting, 2024): savings of +1 million EUR,
-            proj segmentation →tracker creation → stage setup → RASCI matrix → project leaders → Gantt;
+        <li>Cost Reduction, VA/VE + PPV (Magna Lighting, 2024): savings of +1 million EUR,<br />
+            proj segmentation →tracker creation → stage setup → RASCI matrix → project leaders → Gantt;<br />
             implementation of an effective system for managing optimization projects across the plant
         </li>
-        <li>2.	SMED implementation in 4 plants (4x10pers) (Żywiec Zdrój, 2021): -25% changeover redu; 
-            recording → analysis → external/internal split → internal reduction → standardization → results
+        <li>"SMED implementation in 4 plants (4x10pers) (Żywiec Zdrój, 2021): -25% changeover redu;<br />
+            recording → analysis → external/internal split → internal reduction → standardization → results"
         </li>
-        <li>3.	Mapping of key production/logistics processes (Spomasz/Ferrum, 2023-24): ensuring control and development of key processes; tools: VSM/VSD/flowchart/swimlane – process maps; 
+        <li>Mapping of key production/logistics processes (Spomasz/Ferrum, 2023-24): ensuring control and development of key processes;<br />
+            tools: VSM/VSD/flowchart/swimlane – process maps;<br />
             proving that single-piece/low-vol type production can also implement and develop optimization
         </li>
-        <li>4.	Kaizen suggestion rollout (Hydro, 2018): 400 ideas/year, 70% projects implemented; 
+        <li>Kaizen suggestion rollout (Hydro, 2018): 400 ideas/year, 70% projects implemented;<br />
             kaizen’s ideas executed by employees-idea creators; building a fully functional system
             </li>
     </ol>
     <hr />
     <h2>Education</h2>
     <ul>
-        <li>Lean Manufacturing + Green Belt certification<br />
+        <li><h3></h3>Lean Manufacturing + Green Belt certification</h3><br />
             10/2016 – 06/2017<br />
             Poznan University of Economics | (Postgraduate)
         </li>
@@ -68,9 +69,9 @@
     <h2>Other</h2>
     <a href="./public/contact.html">Contact Me</a>
     <footer>
-        <p>
+        <small>
             Krzysztof Rogoziński. All rights reserved.
-        </p>
+        </small>
     </footer>
 </body>
 </html>
