--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <img src="./assets/images/krogozinski_profil.jpg" height="200" 
     alt="krzysztof's photo" />
     <h2>Summary</h2>
-    <p>"Experienced Continuous Improvement Coordinator with +8 years of expertise in building, motivating<br />
+    <p>Experienced Continuous Improvement Coordinator with +8 years of expertise in building, motivating<br />
         optimization project teams up to 10pers (production, quality, supply chain, purchasing),<br /> 
         proven track record cost savings of + €1 million annually @Magna. Qualified in implementing Lean Six Sigma (Green Belt),<br /> 
         incl. DMAIC, SMED, TPM, VSM, Kaizen, problem solving & standardization in the automotive and FMCG industries<br /> 
         (linear/cellular production, mass/custom production). My experience allows me to effectively adapt Lean tools<br /> 
-        to the specific needs of the organization, increasing productivity, improving operational efficiency, and reducing costs."
+        to the specific needs of the organization, increasing productivity, improving operational efficiency, and reducing costs.
     </p>
     <hr />
     <h2>Professional Experience</h2>
     <ul>
         <li><h3>Continuous Improvement Coordinator/Manager</h3>
-        <p>"05/2024 – 07/2024 (3m)"</p>
-        <p>Magna Lighting, Kostrzyn n/Odra | (automotive lighting, 80IMMs + 20assembly lines, 1000 pers)</p>
+        <p>05/2024 – 07/2024 (3m)</p>
+        <p><h4></h4>Magna Lighting, Kostrzyn n/Odra | (automotive lighting, 80IMMs + 20assembly lines, 1000 pers)</h4></p>
         <p>reported to the Engineering Director and East-Europe Finance Director
         </p>
             <ul>
