--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <a href="./public/contact.html">Contact Me</a>
     <footer>
         <small>
-            Krzysztof Rogoziński. All rights reserved.
+            &copy;Krzysztof Rogoziński. All rights reserved.
         </small>
     </footer>
 </body>
